<!--

    Copyright 2020 The Department of Interior

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>gov.osmre.uasdm</groupId>
  <artifactId>uasdm</artifactId>
  <version>0.15.3-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>UASDM</name>
  <description>Unmanned Aerial Surveilance Data Management</description>

  <modules>
    <module>uasdm-server</module>
    <module>uasdm-web</module>
  </modules>

  <properties>
    <geoprism.version>0.13.0</geoprism.version>
  
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <aspectj.version>1.9.7</aspectj.version>    
    <aspectj.plugin.version>1.13.1</aspectj.plugin.version>    

    <geotools.version>16.1</geotools.version>    
  </properties>
  
  <licenses>
    <license>
      <name>
        Apache License, Version 2.0
      </name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
  </licenses>
  
  <scm>
    <connection>scm:git:ssh://git@github.com/terraframe/osmre-uav</connection>
    <developerConnection>scm:git:ssh://git@github.com/terraframe/osmre-uav</developerConnection>
    <url>scm:git:ssh://git@github.com/terraframe/osmre-uav</url>
    <tag>0.001.001-SNAPSHOT</tag>
  </scm>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  
  <repositories>
    <repository>
      <id>central</id>
      <name>central</name>
      <url> https://repo1.maven.org/maven2/</url>
      <layout>default</layout>
    </repository>    
    <repository>
      <id>terraframe-public</id>
      <url>https://dl.cloudsmith.io/public/terraframe/public/maven/</url>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
    </repository>
    <repository>
      <id>terraframe-runwaysdk</id>
      <url>https://dl.cloudsmith.io/public/terraframe/runwaysdk/maven/</url>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
    </repository>
    <repository>
      <id>terraframe-geoprism</id>
      <url>https://dl.cloudsmith.io/public/terraframe/geoprism/maven/</url>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
    </repository>
    <repository>
      <id>terraframe-osmre-uav</id>
      <url>https://dl.cloudsmith.io/public/terraframe/osmre-uav/maven/</url>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
    </repository>
  </repositories>

  <distributionManagement>
    <snapshotRepository>
      <id>cloudsmith</id>
      <url>https://maven.cloudsmith.io/terraframe/osmre-uav/</url>
    </snapshotRepository>
    <repository>
      <id>cloudsmith</id>
      <url>https://maven.cloudsmith.io/terraframe/osmre-uav/</url>
    </repository>
  </distributionManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>se.bjurr.gitchangelog</groupId>
        <artifactId>git-changelog-maven-plugin</artifactId>
        <version>1.92</version>
        <inherited>false</inherited>
        <configuration>
         <templateContent>
# Changelog
{{#tags}}
{{#ifReleaseTag .}}
{{#ifMatches name "(0\.15\.[1-9]+)|(0\.1[6-9]\.\d+)|(0\.[2-9]\d+\.\d+)|([1-9]+\.\d+\.\d+)"}}
## [{{name}}](https://github.com/terraframe/osmre-uav/releases/tag/{{name}}) ({{tagDate .}})

  {{#ifContainsType commits type='feat'}}
### Features

    {{#commits}}
      {{#ifCommitType . type='feat'}}
 - {{#eachCommitScope .}} **{{.}}** {{/eachCommitScope}} {{{commitDescription .}}} ([{{hash}}](https://github.com/terraframe/osmre-uav/commit/{{hashFull}}))
      {{/ifCommitType}}
    {{/commits}}
  {{/ifContainsType}}

  {{#ifContainsType commits type='fix'}}
### Bug Fixes

    {{#commits}}
      {{#ifCommitType . type='fix'}}
 - {{#eachCommitScope .}} **{{.}}** {{/eachCommitScope}} {{{commitDescription .}}} ([{{hash}}](https://github.com/terraframe/osmre-uav/commit/{{hashFull}}))
      {{/ifCommitType}}
    {{/commits}}
  {{/ifContainsType}}

{{/ifMatches}}
{{/ifReleaseTag}}
{{/tags}}
         </templateContent>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.4.2</version>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.scm</groupId>
            <artifactId>maven-scm-provider-gitexe</artifactId>
            <version>1.8.1</version>
          </dependency>
        </dependencies>
      </plugin>
      <!-- Add generated source directories -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>add-source</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>src/main/java-gen/base</source>
                <source>src/main/java-gen/stub</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <inherited>true</inherited>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>2.11</version>
        <configuration>
          <header>${basedir}/LICENSE_HEADER</header>
          <excludes>
            <exclude>target/**</exclude>
            <exclude>m2-target/**</exclude>
            <exclude>**/*.properties</exclude>
            <exclude>**/*.launch</exclude>
            <exclude>**/*.vsd</exclude>
            <exclude>**/*.gitignore</exclude>
            <exclude>**/*.LESSER</exclude>
            <exclude>**/*.xls</exclude>
            <exclude>**/doc/**</exclude>
            <exclude>**/launches/**</exclude>
            <exclude>**/*.jar</exclude>
            <exclude>LICENSE_HEADER</exclude>
            <exclude>**/*.markdown</exclude>
            <exclude>**/COPYING</exclude>
            <exclude>**/logs/**</exclude>
            <exclude>**/*.png</exclude>
            <exclude>**/thirdparty/**</exclude>
            <exclude>**/yui2/**</exclude>
            <exclude>**/yui3/**</exclude>
            <exclude>**/.git/**</exclude>
            <exclude>**/ajcore*.txt</exclude>
            <exclude>**/.directory</exclude>
            <exclude>**/.keystore</exclude>
            <exclude>**/.keyStore</exclude>
            <exclude>**/*.yml</exclude>
            <exclude>**/custom-fonts/**</exclude>
            <exclude>**/node_modules/**</exclude>
            <exclude>**/typings/**</exclude>
            <exclude>**/ng2/**</exclude>
            <exclude>**/webapp/dist/**</exclude>
            <exclude>**/cldr/**</exclude>
            <exclude>uasdm-clusterodm/ClusterODM/**</exclude>
            <exclude>uasdm-micasense/imageprocessing/**</exclude>
            <exclude>uasdm-micasense/micasense/**</exclude>
            <exclude>uasdm-micasense/in/**</exclude>
            <exclude>uasdm-micasense/out/**</exclude>
            <exclude>uasdm-micasense/.pytest_cache/**</exclude>
            <exclude>uasdm-odm/NodeODM/**</exclude>
            <exclude>uasdm-odm/ODM/**</exclude>
            <exclude>geoserver-data/**</exclude>
            <exclude>src/solr/configsets/**</exclude>
            <exclude>**/session/sessionCache/**</exclude>

            <!-- 3rd party library mishmashes. When we upgrade tomcat we can remove these with webjars. -->
            <exclude>**/webapp/3rd-party/**</exclude>
          </excludes>
          <properties>
            <name>${project.name}</name>
            <year>${project.inceptionYear}</year>
            <holder>The Department of Interior</holder>
            <contact>getinfo@osmre.gov</contact>
          </properties>
          <encoding>UTF-8</encoding>
        </configuration>
        <!-- <executions>
          <execution>
            <phase>process-sources</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions> -->
      </plugin>
    </plugins>
    <pluginManagement>
    	<plugins>
    		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
    		<plugin>
    			<groupId>org.eclipse.m2e</groupId>
    			<artifactId>lifecycle-mapping</artifactId>
    			<version>1.0.0</version>
    			<configuration>
    				<lifecycleMappingMetadata>
    					<pluginExecutions>
    						<pluginExecution>
    							<pluginExecutionFilter>
    								<groupId>
    									org.apache.maven.plugins
    								</groupId>
    								<artifactId>
    									maven-dependency-plugin
    								</artifactId>
    								<versionRange>[2.8,)</versionRange>
    								<goals>
    									<goal>build-classpath</goal>
    								</goals>
    							</pluginExecutionFilter>
    							<action>
    								<ignore />
    							</action>
    						</pluginExecution>
    					</pluginExecutions>
    				</lifecycleMappingMetadata>
    			</configuration>
    		</plugin>
    	</plugins>
    </pluginManagement>
  </build>
</project>
